--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(windows_demo C)
 set(CMAKE_C_STANDARD 17)
 
 # 隐藏控制台黑窗口
-set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -mwindows)
+# set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -mwindows)
 
 add_executable(windows_demo main.c)
