--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -mwindows)
 #add_executable(windows_demo main.c)
 #add_executable(windows_demo window_demo_1.c)
 #add_executable(windows_demo window_demo_2.c)
-add_executable(windows_demo window_demo_3.c)
+#add_executable(windows_demo window_demo_3.c)
