--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -mwindows)
 #add_executable(windows_demo window_demo_1.c)
 #add_executable(windows_demo window_demo_2.c)
 #add_executable(windows_demo window_demo_3.c)
-add_executable(windows_demo window_demo_4.c)
+add_executable(windows_demo window_demo_4.c win.h)
