--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -mwindows)
 #add_executable(windows_demo src/demo_2.c)
 #add_executable(windows_demo src/demo_3.c)
 #add_executable(windows_demo src/demo_4.c win.h)
-add_executable(windows_demo src/demo_5.c)
+#add_executable(windows_demo src/demo_5.c)
+add_executable(windows_demo src/demo_6.c)
